--- a/style/media.css
+++ b/style/media.css
@@ -8,7 +8,34 @@
    .header__title .header__description {
         font-size: 18px;
     }
+    .section__team {
+        margin-bottom: 90px !important;
+    }
+    .section__stats {
+        margin-bottom: 90px !important;
+    }
+    .footer__flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer__list {
+       align-items: center;
+       margin-bottom: 30px;
+    }
+    .footer__list-adress {
+        text-align: center;
+    }
+    .footer__info {
+        margin-bottom: 30px !important;
+    }
+    .footer {
+        padding-top: 50px !important;
+        padding-bottom: 50px !important;
+    }
 }
+
 @media (max-width:400px) {
      .header {
         padding-top: 30px !important;
@@ -22,7 +49,19 @@
     .navbar .header__nav-items {
         transform: translate(0);
     }
-    /* .header__nav-items .header__nav-finger {
-        font-size: 24px;
-    } */
+    .footer__input-box {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .section__footer-email {
+        margin-bottom: 20px;    
+    }
+
+}
+@media (max-width:331px) {
+     .section__contacts-title {
+         font-size: 28px !important;
+     }
+    
 }
